<resources>
    <string name="app_name">CryptoNumismatic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">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</string>
    <string name="logo">cryptonumismatic</string>
    <string name="secondLogo">EASY &amp; FAST</string>
    <string name="autorizeStart">Autorize your account for start traiding with most anonimus cryptowallet on market </string>
    <string name="googleLogIn">Add your Google profile for create your account.</string>
    <string name="inputTextHintEmail">Type Your E-Mail </string>
    <string name="inputTextHintPassword">Type Your Password</string>
    <string name="inputTextHintPasswordRegistration">Create Password with 8 chracters</string>
    <string name="inputTextHintRepeatPassword">Repeat Password with 8 chracters</string>
    <string name="inputTextHintFind">Find crypto</string>
    <string name="textTopCoins">Top Coins</string>
    <string name="textTopNfts">Top NFTs</string>
    <string name="textGrowthCoins">Growth Leaders</string>
    <string name="textFindCoins">Found Coins</string>
    <string name="purchasePrice">Purchase price:</string>
    <string name="quantity">Quantity:</string>
    <string name="purchaseDate">Purchase Date:</string>
    <string name="enterPrice">Enter price</string>
    <string name="enterQuantity">Enter quantity</string>
    <string name="enterDate">Enter date</string>
    <string name="addTransaction">Add Transaction</string>
    <string name="yourAssets">Your Assets</string>
    <string name="assetType">Asset Type</string>
    <string name="price">Price</string>
    <string name="assets">Assets</string>
    <string name="aboutApplication">About Application</string>
    <string name="signOut">Sign Out</string>
    <string name="aboutAppText">
        This application was created for those people who own cryptocurrency
        and want to be able to view their portfolio easily and simply.
        <br/><br/>\n\n
        In the application you can view the prices for cryptocurrency,
        as well as price changes over the past 24 hours. The application has about ten thousand cryptocurrencies.
        <br/><br/>\n\n
        The application has the ability to add cryptocurrency to your portfolio.
        You can view all the information about your purchase.
        <br/><br/>\n\n
        <i>Contacts:</i>
        <br/>\n
        <i>+380688296828</i>
        <br/>\n
        <i>ruslanosadtsia@gmail.com</i></string>
</resources>