<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.PortfolioFragment"
    android:background="@color/darkBlue">

    <TextView
        android:id="@+id/textMyCoinsPortfolio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/yourAssets"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/horizontalViewiewPortfolio"
        android:layout_width="0dp"
        android:layout_height="1px"
        android:layout_marginTop="32dp"
        android:background="@color/strokeColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textMyCoinsPortfolio" />

    <TextView
        android:id="@+id/textAllMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/roboto_medium"
        android:text="-USD"
        android:textColor="@color/price"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textMyCoinsPortfolio"
        app:layout_constraintStart_toEndOf="@+id/textMyCoinsPortfolio"
        app:layout_constraintTop_toTopOf="@+id/textMyCoinsPortfolio" />

    <ProgressBar
        android:id="@+id/progressBarPortfolio"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalViewiewPortfolio" />

    <TextView
        android:id="@+id/textEmptyPortfolio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_medium"
        android:text="Empty Portfolio"
        android:textColor="@color/price"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalViewiewPortfolio" />

    <TextView
        android:id="@+id/textAssetsTypePortfolio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/roboto"
        android:text="@string/assetType"
        android:textColor="@color/strokeColor"
        app:layout_constraintBottom_toTopOf="@+id/horizontalViewiewPortfolio"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textPricePortfolio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:fontFamily="@font/roboto"
        android:text="@string/price"
        android:textColor="@color/strokeColor"
        app:layout_constraintBottom_toTopOf="@+id/horizontalViewiewPortfolio"
        app:layout_constraintStart_toEndOf="@+id/textAssetsTypePortfolio" />

    <TextView
        android:id="@+id/textAssetsPortfolio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="54dp"
        android:fontFamily="@font/roboto"
        android:text="@string/assets"
        android:textColor="@color/strokeColor"
        app:layout_constraintBottom_toTopOf="@+id/horizontalViewiewPortfolio"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalViewiewPortfolio">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerPortfolio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>