<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlue"
    tools:context=".Fragments.LogInFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textLogoLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:fontFamily="@font/quicksand_medium"
            android:shadowColor="#F44336"
            android:shadowDy="-2"
            android:shadowRadius="3"
            android:text="@string/logo"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textSecondLogoLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:layout_marginEnd="-40dp"
            android:fontFamily="@font/roboto_italic"
            android:text="@string/secondLogo"
            android:textColor="@color/redText"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/textLogoLogIn"
            app:layout_constraintTop_toBottomOf="@+id/textLogoLogIn" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:hint="E-mail"
            android:textColorHint="@color/white"
            app:boxCornerRadiusBottomEnd="7dp"
            app:boxCornerRadiusBottomStart="7dp"
            app:boxCornerRadiusTopEnd="7dp"
            app:boxCornerRadiusTopStart="7dp"
            app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
            app:expandedHintEnabled="false"
            app:hintTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textSecondLogoLogIn"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.75">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inputTextHintEmail" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="Password"
            android:textColorHint="@color/white"
            app:boxCornerRadiusBottomEnd="7dp"
            app:boxCornerRadiusBottomStart="7dp"
            app:boxCornerRadiusTopEnd="7dp"
            app:boxCornerRadiusTopStart="7dp"
            app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
            app:expandedHintEnabled="false"
            app:hintTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
            app:layout_constraintStart_toStartOf="@+id/editTextEmail"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.75">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inputTextHintPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:clickable="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:id="@+id/buttonLogIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/roboto"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="Log In"
            android:textColor="@color/darkBlue"
            android:textIsSelectable="true"
            android:textSize="16sp"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
            app:layout_constraintStart_toStartOf="@+id/editTextPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

        <TextView
            android:id="@+id/textGoogleLogInLogIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto"
            android:text="@string/googleLogIn"
            android:textColor="@color/white"
            android:textSize="16sp"

            app:layout_constraintStart_toStartOf="@+id/buttonLogIn"
            app:layout_constraintTop_toTopOf="@+id/buttonGoogleLogIn"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.35"
            app:lineHeight="27sp" />

        <Button
            android:id="@+id/buttonGoogleLogIn"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:fontFamily="sans-serif-light"
            android:includeFontPadding="false"
            android:letterSpacing="0"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp"
            android:text="+"
            android:textColor="@color/strokeColor"
            android:textIsSelectable="false"
            android:textSize="50sp"
            app:cornerRadius="10dp"
            app:icon="@drawable/ic_logo_google"
            app:iconPadding="15dp"
            app:iconTint="@android:color/transparent"
            app:iconTintMode="add"
            app:layout_constraintEnd_toEndOf="@+id/buttonLogIn"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogIn"
            app:strokeColor="@color/strokeColor"
            app:strokeWidth="1dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>