<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlue"
    tools:context=".Fragments.MarketFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutFind"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/darkBlue"
        app:boxCornerRadiusBottomEnd="7dp"
        app:boxCornerRadiusBottomStart="7dp"
        app:boxCornerRadiusTopEnd="7dp"
        app:boxCornerRadiusTopStart="7dp"
        app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
        app:endIconDrawable="@drawable/ic_icon_find"
        app:endIconMode="custom"
        app:expandedHintEnabled="false"
        app:hintEnabled="false"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.9">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextFind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputTextHintFind"
            android:maxLines="1"
            android:paddingStart="3dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutFind">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textFindCoinsMarket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/textFindCoins"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/progressBarFindCoins"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:foregroundGravity="center_horizontal"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewFindCoins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                android:id="@+id/textTopCoinsMarket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/textTopCoins"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <ProgressBar
                android:id="@+id/progressBarTopCoins"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:foregroundGravity="center_horizontal"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewTopCoins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"></androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/textGrowthLeaderMarket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/textGrowthCoins"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <ProgressBar
                android:id="@+id/progressBarGrowthCoins"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:foregroundGravity="center_horizontal"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewGrowthLeaders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>